// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifGridItem should match snaptshot 1`] = `
<div
  className="card animate__shakeX"
>
  <img />
  <p>
            
  </p>
</div>
`;

exports[`Pruebas en <GifGridItem /> debe de mostrar el componente correctamente 1`] = `
<div
  className="card animate__shakeX"
>
  <img
    alt="Un título"
    src="https://localhost/algo.jpg"
  />
  <p>
    Un título
            
  </p>
</div>
`;
